--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,33 @@
 .App-link {
   color: #09d3ac;
 }
+
+body {
+  margin: 0 !important;
+}
+
+.content {
+  margin: 20px;
+}
+
+.nav-link {
+  color: inherit;
+  text-decoration: none;
+  margin-right: 15px;
+}
+
+.nav-link:hover,
+.nav-link:active,
+.nav-lin:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.MuiTextField-root {
+  display: block !important;
+}
+
+.MuiInputBase-root {
+  width: 300px !important;
+  margin-left: 3px;
+}
